[package]
name = "lsio"
version = "0.1.0"
authors = ["Chris Jones <cj@hanscj.com>"]
license = "Apache-2.0"
readme = "README.md"
keywords = ["devops", "automation", "CI", "CD"]
repository = "https://github.com/lambdastackio/lsio"
homepage = "https://github.com/lambdastackio/lsio"
documentation = "https://github.com/lambdastackio/lsio"
description = """
lsio is the library for lsio command line utility and s3lsio. Heavy dev beware!
"""

[dependencies]
ssh2 = "*"
rpassword = "*"
ansi_term = "*"
errno = "*"
semver = "*"
log = "*"
env_logger = "*"
rustc-serialize = "*"

#[dependencies.url]
#git = "https://github.com/servo/rust-url"
